docs: NOTES.md 增加 AI 工具使用、问题解决记录、未来展望章节